# nao-sound-classification

./: .gitignore  CMakeLists.txt  FindXTRACT.cmake  KlasifikacijaGovora.cpp  KlasifikacijaGovora.h  README.md  SCModule.cpp  SCModule.h  SCmain.cpp  config.h  configurator.cpp  features.cpp  features.h  fft_ifft.h  fileClassify.cpp  folderClassify.cpp  learner.cpp  listener.cpp  main.cpp  naoClassify.cpp  noiseFilter.cpp  noiseFilter.h  qiproject.xml
scripts/: create_dataset_list.py  cross_validation.py  generate_matrices.sh  prepare_audio.sh  split_train_test_data.py  transform_dataset_list.py  validator.py
